--- a/Task3_SimplePortfolio/portfoliocss.css
+++ b/Task3_SimplePortfolio/portfoliocss.css
@@ -157,12 +157,14 @@
 }
 
 #projects p{
-    display: flex;
+    /* display: flex; */
     color:rgba(47, 8, 8, 0.913) ;
     text-align: center;
     font-size: 1.5rem;
     font-family: 'Ubuntu', sans-serif;
     margin: 20px;
+    box-sizing: auto;
+
 }
 
 #skills{
